[tool.poetry]
authors = ["Mert Kayhan <mert.kayhan@tum.de>"]
description = ""
name = "bq"
version = "0.1.0"

[tool.poetry.dependencies]
google-cloud = "^0.34.0"
google-cloud-bigquery = {version = "^3.1.0", python = ">=3.8,<3.11"}
python = "^3.8"
ratelimiter = {url = "https://github.com/fsn-capital/pycommon/releases/download/test/ratelimiter-0.1.0.tar.gz"}
retry = {url = "https://github.com/fsn-capital/pycommon/releases/download/test/retry-0.1.0.tar.gz"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
coverage = "^6.4.3"
mypy = "^0.971"
pytest = "^5.2"
types-requests = "^2.28.8"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
