[tool.poetry]
authors = ["Mert Kayhan <mk@fsncapital.com>"]
description = "Implements retry logic compliant with gcp clients"
name = "retry"
version = "0.1.0"

[tool.poetry.dependencies]
backoff = "^2.1.2"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
coverage = "^6.4.3"
mypy = "^0.971"
pdoc3 = "^0.10.0"
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
