[tool.poetry]
authors = ["Mert Kayhan <mk@fsncapital.com>"]
description = ""
name = "utils"
version = "0.1.0"

[tool.poetry.dependencies]
backoff = "^2.1.2"
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
